# FleetRTS

./: .gitignore  FleetRTS.spec  README.md  commandslist.txt  pyproject.toml  requirements-server.txt  requirements.txt
core/: COMBAT_DESIGN.txt  __init__.py  bundle_paths.py  combat.py  combat_constants.py  combat_engine.py  combat_math.py  combat_mp.py  combat_ordnance.py  combat_sim.py  combat_snapshot.py  data.json  demo_game.py  draw.py  engine.py  fleet_deployment.py  game_audio.py  game_state.py  main.py  mp_combat_bootstrap.py  mp_session.py  mp_spawn_layout.py  pvp_battlegroups.py  runtime_tts.py  scene_bg_editor.py  scene_combat.py  scene_config.py  scene_debrief.py  scene_gameover.py  scene_loadouts.py  scene_mp_hub.py  scene_mp_lobby.py  scenes.py  ship_portraits.py
core/net/: __init__.py  app_messages.py  combat_net.py  http_client.py  protocol.py  relay_client.py
docs/: MP_INVARIANTS.md  MP_MULTIPLAYER_RISK_REVIEW.md
packaging/: WINDOWS_FRIEND_BUILD.txt
server/: README_DEPLOY.txt  bootstrap_droplet.sh  droplet_http_stub.py  fleetrts-relay.service  fleetrts-stub.service  fleetrts.env.example  headless_combat_host.py  start_fleetrts.sh  stop_fleetrts.sh  tcp_relay.py
tools/: _extract_helpers.py  _patch_demo_imports.py  _patch_gs.py  generate_announcer_voice.py  split_ship_portrait_sheet.py
