[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetrts"
version = "0.1.0"
description = "FleetRTS pygame prototype with optional HTTP/TCP lobby stubs"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.0",
]

[project.scripts]
fleetrts = "core.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
